# reactos-luagent

./: .gitignore  CMakeLists.txt  README.md  hello.c
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  debugging.md  protocol.md  test-plan.md  usage.md
lua/: bootstrap.lua
lua/ops/: debug_procs.lua  debug_sessions.lua  debug_stats.lua  debug_transfers.lua  list.lua  port_close.lua  port_list.lua  port_open.lua  tool_run.lua
src/: bindings.c  bindings.h  diag.c  diag.h  frame.c  frame.h  lua_engine.c  lua_engine.h  main.c  portfwd.c  portfwd.h  proc.c  proc.h  protocol.c  protocol.h  server.c  server.h  session.c  session.h  transfer.c  transfer.h  util.c  util.h
tests/host_client/: client.c
tests/integration/: run_client_daemon.py  run_integration.py
tools/: client_daemon.py
